// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Profiles /> renders the <Profiles /> with populated data 1`] = `
<div
  class="profiles__Container-sc-dt3hl3-0 bAiYsa"
>
  <h1
    class="profiles__Title-sc-dt3hl3-1 elYLzO"
  >
    Who's watching?
  </h1>
  <ul
    class="profiles__List-sc-dt3hl3-2 krZSlx"
  >
    <li
      class="profiles__Item-sc-dt3hl3-5 biaRH"
    >
      <img
        class="profiles__Picture-sc-dt3hl3-4 fDkDPS"
        data-testid="profile-picture"
        src="/images/users//images/karl.png.png"
      />
      <p
        class="profiles__Name-sc-dt3hl3-3 gJJeiZ"
      >
        Karl Hadwen
      </p>
    </li>
  </ul>
</div>
`;

exports[`<Profiles /> renders the <Profiles /> with populated data but misc profile image 1`] = `
<div
  class="profiles__Container-sc-dt3hl3-0 bAiYsa"
>
  <h1
    class="profiles__Title-sc-dt3hl3-1 elYLzO"
  >
    Who's watching?
  </h1>
  <ul
    class="profiles__List-sc-dt3hl3-2 krZSlx"
  >
    <li
      class="profiles__Item-sc-dt3hl3-5 biaRH"
    >
      <img
        class="profiles__Picture-sc-dt3hl3-4 fDkDPS"
        data-testid="profile-picture-misc"
        src="/images/misc/loading.gif"
      />
      <p
        class="profiles__Name-sc-dt3hl3-3 gJJeiZ"
      >
        Karl Hadwen
      </p>
    </li>
  </ul>
</div>
`;
